--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "strudel-taskflows",
+  "name": "Wine Explorer - Strudel Kit Demo",
   "private": true,
   "version": "0.1.2",
   "type": "module",
-  "homepage": "https://codytodonnell.github.io/strudel-kit/demo/",
+  "homepage": "https://superbloom.github.io/wine-explorer/",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -16,6 +16,7 @@
     "prettier": "prettier . --check '**/*.{js,jsx,ts,tsx}'",
     "prettier:fix": "prettier . --write '**/*.{js,jsx,ts,tsx}'",
     "prepare": "husky ./.husky",
+    "test": "vitest",
     "cy:open": "cypress open",
     "cy:test": "cypress run"
   },
@@ -59,10 +60,12 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "husky": "^9.1.6",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^6.2.1"
+    "vite": "^6.2.1",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": "^18.18.0 || >=20.0.0"
