--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "strudel.config.ts",
     "cypress",
     "cypress.config.ts",
-    "vite.config.ts"
+    "vite.config.ts",
+    "__mocks__",
+    "tests"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
