--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "devDependencies": {
     "@tanstack/router-devtools": "^1.109.2",
     "@tanstack/router-plugin": "^1.109.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/d3-fetch": "^3.0.7",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
