--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#CLI agents
+.code/
+.claude/
+.bmad-core/
+.clinerules/
+.crush/
+.gemini/
+.opencode/
+.serena/
+.vscode/
+.qwen/
+
 # dependencies
 node_modules/
 /.pnp
