--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.109.2",
     "d3-fetch": "^3.0.1",
+    "papaparse": "^5.4.1",
     "dayjs": "^1.11.10",
     "plotly.js": "^2.30.1",
     "react": "^18.2.0",
@@ -45,6 +46,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/d3-fetch": "^3.0.7",
     "@types/node": "^20.12.12",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-plotly.js": "^2.6.3",
